Fix repaint issue on Safari (avoid using `display: block`)

--- a/styles/imports/candles.css
+++ b/styles/imports/candles.css
@@ -1,18 +1,19 @@
 .results {
   display: flex;
   flex-direction: column;
-  border: 1px solid;
-  border-radius: 8px;
-  /* width: fit-content; */
-  overflow: hidden;
   margin-top: 32px;
 }
 
 .candles {
   display: flex;
   justify-content: center;
-  width: fit-content;
-  margin: 16px auto;
+  /* width: fit-content; */
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.candles:empty {
+  padding: 0;
 }
 
 .candles img {
@@ -20,11 +21,7 @@
 }
 
 .explanation {
-  background: lightgray;
+  background: rgba(0, 0, 0, 0.1);
   padding: 0 16px;
   text-align: center;
-}
-
-.results:has(.candles:empty) {
-  display: none;
 }
